--- a/src/pom.xml
+++ b/src/pom.xml
@@ -10,6 +10,13 @@
 
     <build>
         <finalName>uvc</finalName>
+	<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version> <!-- Actualizado -->
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
