Fix artifact var in Dockerfile-1b

--- a/docker/spring-boot-app/Dockerfile
+++ b/docker/spring-boot-app/Dockerfile
@@ -1,8 +1,5 @@
 # Dockerfile
 FROM tomcat:9-jdk8
 
-# Variable ARG opcional si quieres parametrizar el nombre del WAR
-ARG artifact=${WORKSPACE_DIR}/target/uvc.war
-
-# Copiamos el WAR dentro de la carpeta webapps de Tomcat
-COPY ${artifact} /usr/local/tomcat/webapps/uvc.war
+# Copy generated WAR in Tomcat webapps deployments
+COPY ${WORKSPACE_DIR}/target/uvc.war /usr/local/tomcat/webapps/
