--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,27 +2,27 @@ services:
   tomcat-standalone:
     image: tomcat:9.0.102-jre8
     environment:
-      - CATALINA_OPTS=-Xms512m -Xmx1024m
+      - CATALINA_OPTS=-Xms256m -Xmx512m
     volumes:
-      - ./webapps:/usr/local/tomcat/webapps
+      - tomcat-webapps:/usr/local/tomcat/webapps
     ports:
       - "8088:8080"
 
   tomcat-cluster-node1:
     image: tomcat:9.0.102-jre8
     environment:
-      - CATALINA_OPTS=-Xms512m -Xmx1024m
+      - CATALINA_OPTS=-Xms256m -Xmx512m
     volumes:
-      - ./webapps:/usr/local/tomcat/webapps
+      - tomcat-webapps:/usr/local/tomcat/webapps
     networks:
       - tomcat-cluster
 
   tomcat-cluster-node2:
     image: tomcat:9.0.102-jre8
     environment:
-      - CATALINA_OPTS=-Xms512m -Xmx1024m
+      - CATALINA_OPTS=-Xms256m -Xmx512m
     volumes:
-      - ./webapps:/usr/local/tomcat/webapps
+      - tomcat-webapps:/usr/local/tomcat/webapps
     networks:
       - tomcat-cluster
 
@@ -38,3 +38,6 @@ services:
 networks:
   tomcat-cluster:
     driver: bridge
+
+volumes:
+  tomcat-webapps:
