Include newest .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,66 @@
-docker/webapps/*
+
+target/
+*.war
+*.jar
+
+.mvn/
+mvnw
+mvnw.cmd
+
+.idea/
+.project
+.classpath
+*.iml
+*.ipr
+*.iws
+.settings/
+.vscode/
+
+jenkins_home/
+*.log
+workspace/
+node_modules/
+.jenkins/
+.pipeline/
+
+webapps/
+docker/webapps/
+docker/webapps/uvc/
+docker/webapps/uvc/*
+docker/tomcat/logs/
+docker/tomcat/temp/
+docker/tomcat/work/
+
+docker-compose.override.yml
+.env
+*.pid
+*.sock
+
+k8s/manifests/generated/
+k8s/.cache/
+ArgoCD/*.backup
+ArgoCD/*.lock
+ArgoCD/*.tmp
+
+volumes/
+docker-data/
+
+secrets/
+*.pem
+*.key
+*.crt
+*.enc
+*.kube/
+.kube/config
+**/kubeconfig
+argocd/config
+argocd/secrets/
+argocd/kustomize/
+argocd/kubeconfig
+
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*.swn
+*.~lock
