--- a/ArgoCD/argocd-basic.yaml
+++ b/ArgoCD/argocd-basic.yaml
@@ -2,13 +2,15 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: spring-boot-app
+  namespace: argocd
 spec:
+  project: default
   destination:
     namespace: default
     server: https://kubernetes.default.svc
   source:
     repoURL: https://github.com/gstvo2k15/tomcat.git
-    targetRevision: main
+    targetRevision: fix/deployment
     path: spring-boot-app-manifests
   syncPolicy:
     automated:
