--- a/spring-boot-app-manifests/service.yml
+++ b/spring-boot-app-manifests/service.yml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: spring-boot-app-service
+  namespace: tomcatk8s
 spec:
-  type: LoadBalancer
+  type: NodePort
+  selector:
+    app: spring-boot-app
   ports:
   - name: http
     port: 80
     targetPort: 8080
-    protocol: TCP
-  selector:
-    app: spring-boot-app
+    nodePort: 30080
