--- a/Helm-charts/elk/templates/elasticsearch-service.yaml
+++ b/Helm-charts/elk/templates/elasticsearch-service.yaml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: elasticsearch
+  labels:
+    app: elasticsearch
 spec:
+  type: NodePort
   selector:
     app: elasticsearch
   ports:
   - protocol: TCP
     port: 9200
     targetPort: 9200
+    nodePort: {{ .Values.elasticsearch.nodePort }}
