--- a/Helm-charts/elk/templates/kibana-service.yaml
+++ b/Helm-charts/elk/templates/kibana-service.yaml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kibana
+  labels:
+    app: kibana
 spec:
+  type: NodePort
   selector:
     app: kibana
   ports:
   - protocol: TCP
     port: 5601
     targetPort: 5601
+    nodePort: {{ .Values.kibana.nodePort }}
