--- a/Helm-charts/elk/templates/logstash-service.yaml
+++ b/Helm-charts/elk/templates/logstash-service.yaml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: logstash
+  labels:
+    app: logstash
 spec:
+  type: NodePort
   selector:
     app: logstash
   ports:
   - protocol: TCP
     port: 5044
     targetPort: 5044
+    nodePort: {{ .Values.logstash.nodePort }}
