--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -5,8 +5,6 @@ metadata:
   namespace: tomcatk8s
   labels:
     app: spring-boot-app
-  # checkov:skip=CKV_K8S_14: Using latest image is intentional
-  # checkov:skip=CKV_K8S_43: Not using digest for image
 spec:
   replicas: 2
   selector:
@@ -17,24 +15,22 @@ spec:
       labels:
         app: spring-boot-app
     spec:
-      # checkov:skip=CKV_K8S_29: SecurityContext is not needed
-      # checkov:skip=CKV_K8S_23: Running as root is required
-      # checkov:skip=CKV_K8S_40: High UID is not necessary
-      # checkov:skip=CKV_K8S_31: SeccompProfile is not enforced
-      # checkov:skip=CKV_K8S_20: Privilege escalation is required
-      # checkov:skip=CKV2_K8S_6: No NetworkPolicy is defined
       restartPolicy: Always
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: spring-boot-app
-        image: gstvo2k15/ultimate-cicd:latest
+        image: gstvo2k15/ultimate-cicd:v1.0.0
         securityContext:
-          # checkov:skip=CKV_K8S_22: Read-only filesystem is not enforced
-          # checkov:skip=CKV_K8S_8: Liveness probe is not needed
-          # checkov:skip=CKV_K8S_9: Readiness probe is not needed
-          # checkov:skip=CKV_K8S_35: Using env variables for secrets is required
-          # checkov:skip=CKV_K8S_37: Specific capabilities are required
-          # checkov:skip=CKV_K8S_38: ServiceAccountToken auto-mount is needed
-          # checkov:skip=CKV_K8S_28: NET_RAW is required for networking
+          runAsUser: 1000
+          runAsGroup: 1000
+          fsGroup: 1000
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop:
+              - NET_RAW
         ports:
         - containerPort: 8080
         volumeMounts:
@@ -53,7 +49,37 @@ spec:
             memory: "1Gi"
             cpu: "500m"
         command: ["sh", "-c", "while true; do sleep 30; done"]
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
       volumes:
       - name: tomcat-war-storage
         persistentVolumeClaim:
           claimName: tomcat-war-pvc
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: allow-app
+  namespace: tomcatk8s
+spec:
+  podSelector:
+    matchLabels:
+      app: spring-boot-app
+  policyTypes:
+  - Ingress
+  ingress:
+  - from:
+    - podSelector: {}
+    ports:
+    - protocol: TCP
+      port: 8080
