--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -23,9 +23,9 @@ spec:
       - name: spring-boot-app
         image: gstvo2k15/ultimate-cicd:v1.0.0
         securityContext:
-          runAsUser: 1000
-          runAsGroup: 1000
-          fsGroup: 1000
+          runAsUser: 10001
+          runAsGroup: 10001
+          fsGroup: 10001
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
           capabilities:
@@ -36,11 +36,9 @@ spec:
         volumeMounts:
         - name: tomcat-war-storage
           mountPath: /usr/local/tomcat/webapps/
-        envFrom:
-        - configMapRef:
-            name: spring-boot-config
-        - secretRef:
-            name: spring-boot-secrets
+        - name: secret-volume
+          mountPath: "/secrets"
+          readOnly: true
         resources:
           requests:
             memory: "512Mi"
@@ -65,6 +63,9 @@ spec:
       - name: tomcat-war-storage
         persistentVolumeClaim:
           claimName: tomcat-war-pvc
+      - name: secret-volume
+        secret:
+          secretName: spring-boot-secrets
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
