Include ArgoCD sync to pipeline-2c

--- a/docker/spring-boot-app/Dockerfile
+++ b/docker/spring-boot-app/Dockerfile
@@ -1,18 +1,15 @@
-# Dockerfile
 FROM tomcat:9-jdk8
 
-ENV NEXUS_URL=https://nexusgolmolab.duckdns.org/repository/maven-releases
-ENV BUILD_NUMBER=latest
-ENV NEXUS_USER=default
-ENV NEXUS_PASS=default
-
-# Set a non-root user
-USER tomcat
+ENV NEXUS_URL=https://nexusgolmolab.duckdns.org/repository/maven-releases \
+    BUILD_NUMBER=latest \
+    NEXUS_USER=default \
+    NEXUS_PASS=default
 
 COPY start.sh /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/start.sh
 
-# Define a healthcheck
+USER tomcat
+
 HEALTHCHECK --interval=30s --timeout=10s --retries=3 CMD curl --fail http://localhost:8080 || exit 1
 
 CMD ["/usr/local/bin/start.sh"]
